syntax = "proto3";

package monsterclicker_viewmodels_protos;

option csharp_namespace = "MonsterClicker.ViewModels.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the GameViewModel
message GameViewModelState {
  string monster_name = 1; // Original C#: string MonsterName
  int32 monster_max_health = 2; // Original C#: int MonsterMaxHealth
  int32 monster_current_health = 3; // Original C#: int MonsterCurrentHealth
  int32 player_damage = 4; // Original C#: int PlayerDamage
  string game_message = 5; // Original C#: string GameMessage
  bool is_monster_defeated = 6; // Original C#: bool IsMonsterDefeated
  bool can_use_special_attack = 7; // Original C#: bool CanUseSpecialAttack
  bool is_special_attack_on_cooldown = 8; // Original C#: bool IsSpecialAttackOnCooldown
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message AttackMonsterRequest {}
message AttackMonsterResponse {}

message SpecialAttackAsyncRequest {}
message SpecialAttackAsyncResponse {}

message ResetGameRequest {}
message ResetGameResponse {}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service GameViewModelService {
  rpc GetState (google.protobuf.Empty) returns (GameViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc AttackMonster (AttackMonsterRequest) returns (AttackMonsterResponse);
  rpc SpecialAttackAsync (SpecialAttackAsyncRequest) returns (SpecialAttackAsyncResponse);
  rpc ResetGame (ResetGameRequest) returns (ResetGameResponse);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}
